# voxel_engine_test

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  start.bat
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build-linux/CPM_modules/: FindFastSIMD.cmake
build-linux/resources/shaders/: ChunkFrag.glsl  ChunkVert.glsl  CompositeFrag.glsl  SkyboxFrag.glsl  SkyboxVert.glsl  SunFrag.glsl  SunGeom.glsl  SunVert.glsl  TransparentFrag.glsl
build-linux/resources/shaders/chunks/: CSM_functions.glsl  CSM_uniforms.glsl  Translucent_functions.glsl  Utils_functions.glsl
build-linux/resources/shaders/utility/: FullscreenQuad.vert  GaussianBlur.frag  LinearSamplingBlur.frag
build-linux/voxel_engine/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/FastNoise2/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/FastNoise2/src/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/SoLoud/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/glfw/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/glfw/src/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/glm/: Makefile  cmake_install.cmake
build-linux/voxel_engine/dependencies/lwgl/: Makefile  cmake_install.cmake
src/: ChunkLoadListener.cpp  ChunkTracer.cpp  ChunkTracer.h  ChunkTracker.h  Game.cpp  Game.h  GameServices.h  main.cpp  registration.h
src/level/: BiomeGenerator.cpp  BiomeGenerator.h  ChunkTracker.cpp  ChunkTracker.h  Palette.h  TerrainGenerator.h
src/level/biome/: Biome.cpp  Biome.h  BiomeDescriptor.h
src/level/biome/biomes/: AlgalPlains.h  AshPlains.h  BasaltPlateaus.h  CrystalFlats.h  FracturedBasaltFields.h  FrozenGasFields.h  IronBasaltPlateaus.h  MicrobialCrust.h  SilicateSandSeas.h  SlateRockFields.h
src/player/: Player.cpp  Player.h
study/: participant-guide.md
(+6 files in other folders)
